# posit-demo-assets

./: .gitignore  CODEOWNERS  README.md
.github/workflows/: build-env-and-test.yaml  deploy.yaml  deploy.yml  publish.yaml
Python/dash-app/: README.md  app.py  manifest.json  pyproject.toml  requirements.txt
Python/dash-stock-pricing/: .internal.yml  README.md  app.py  manifest.json  pyproject.toml  requirements.txt
Python/fastapi-loan-model/: .internal.yml  README.md  main.py  manifest.json  pyproject.toml  requirements.txt  train.ipynb
Python/fastapi-stock/: .internal.yml  README.md  manifest.json  pyproject.toml  requirements.txt
Python/flask-getting-started-rsc/: README.md  app.py  manifest.json  pyproject.toml  requirements.txt
Python/flask-sentiment-analysis-api/: README.md  app.py  manifest.json  pyproject.toml  requirements.txt
Python/flask-sentiment-analysis-app/: README.md  manifest.json  pyproject.toml
Python/job-launcher-python/: README.md  launchable_job_python.py  readme.md  requirements.txt
Python/jupyter-interactive-visualization/: README.md  jupyter-interactive-visualization.ipynb  manifest.json  pyproject.toml  requirements.txt
Python/jupyter-voila/: .internal.yml  README.md  bqplot.ipynb  hash.ipynb  ipv.ipynb  ipyvolume.ipynb  manifest.json  pyproject.toml  requirements.txt
Python/quarto-getting-started-with-python/: README.html  README.md  _quarto.yml  getting-started-python.qmd  manifest.json  pyproject.toml  requirements.txt
Python/quarto-lightbox/: .internal.yml  README.html  README.md  (+5 more)
R/: .internal.yml  README.md  justfile
(+165 files in other folders)
