[project]
name = "dash-stock-pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
    "dotenv-python>=0.0.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
]
