[project]
name = "jupyter-voila"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "bqplot>=0.12.43",
    "ipython-genutils>=0.2.0",
    "ipython>=8.29.0",
    "ipyvolume>=0.6.3",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
