[project]
name = "quarto-getting-started-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "great-tables>=0.14.0",
    "ipyleaflet>=0.19.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pins>=0.8.6",
    "plotly>=5.24.1",
    "pygwalker>=0.4.8.9",
    "pyyaml>=6.0.2",
    "quarto>=0.1.0",
    "session-info>=1.0.0",
    "statsmodels>=0.14.4",
]
